# LDM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  FINAL_STRUCTURE.md  INSTALLATION.md  LAPORAN.md  METHODOLOGY.md  ORGANIZATION_SUMMARY.json  PROJECT_SUMMARY.md  README.md  README_JOURNAL.md  RESULTS.md  advanced_tuning.py  brain_ldm.py  compare_datasets.py  comprehensive_evaluation.py  config.yaml  create_comparison_chart.py  data_loader.py  demo.py  demo_brain_ldm.py  detailed_visualization.py  display_results.py  evaluate_brain_ldm.py  evaluate_improved_uncertainty.py  evaluate_miyawaki.py  evaluate_miyawaki_optimized.py  evaluate_multimodal_ldm.py  evaluate_vangerven_optimized.py  example_usage.py  final_analysis.py  final_optimization_comparison.py  implement_improvements.py  improve_accuracy_analysis.py  install_dependencies.py  main.py  multimodal_analysis.py  multimodal_brain_ldm.py  organize_for_journal.py  (+30 more)
data/: miyawaki_structured_28x28.mat
evaluation_results/: evaluation_metrics.txt
experiments/configs/: baseline_config.yaml  improved_config.yaml  multimodal_config.yaml
paper_submission/: README.md  SUBMISSION_CHECKLIST.md  compile_paper.bat  compile_paper.sh
results/: COMPREHENSIVE_ANALYSIS.md  miyawaki_config.json
scripts/: analyze_stimulus_data.py  clean_outputs.py  compare_vae_vs_ldm.py  setup_project.py  test_clean_brain_decoding.py  test_reconstruction_from_data.py  test_stimulus_reconstruction.py  train_model.py  visualize_results.py
src/: __init__.py
src/data/: __init__.py  (+4 more)
stimulus_reconstruction_demo/: demo_metrics.json
(+36 files in other folders)
