[project]
name = "ldm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
]
